# LIGHTER_Market_Making

./: .dockerignore  .env.example  .gitignore  AGENTS.md  API.txt  CLAUDE.md  COPY_AWS_COMMAND.txt  DRY_RUN.md  DRY_RUN_MONITORING.md  Dockerfile  GEMINI.md  GRID_QUICKSTART.md  LIGHTER_FREE_SLOT_FINDINGS.md  LIGHTER_doc_code.txt  README.md  _vol_obi_fast.pyx  adjust_leverage.py  archive_project.py  backtest.py  binance_obi.py  calculate_avellaneda_parameters.py  calculate_sigma.py  cartea_jaimungal.py  check_grid_results.py  check_parquet.py  codex-opus48.md  config.json  deploy.py  docker-compose.yml  dry_run.py  find_trend_lighter.py  gather_lighter_data.py  grid_config.json  grid_dry_run.py  improvements.md  intensity.py  lighter_estimators.py  live_metrics.py  logging_config.py  market_maker.py  (+25 more)
OLD/example_rust/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  MONITORING_RUNBOOK.md  README.md  SPREAD_CALCULATION.md  config.btc.json  config.json  config.test.json  docker-compose.yml  test_latency.sh  test_latency_standalone.sh
OLD/example_rust/src/: config.rs  lib.rs  logging.rs  main.rs  types.rs
OLD/example_rust/src/binance/: client.rs  messages.rs  mod.rs  orderbook.rs  shared_alpha.rs
OLD/example_rust/src/orderbook/: history.rs  mod.rs  sanity_check.rs  snapshot.rs
OLD/example_rust/src/strategy/: mod.rs  obi.rs  quotes.rs  rolling.rs  traits.rs
OLD/example_rust/src/trading/: auth.rs  client.rs  equity.rs  mod.rs  order_checker.rs  order_manager.rs  order_ws.rs  orders.rs  position.rs  symbol_info.rs  wallet_tracker.rs
OLD/example_rust/src/websocket/: client.rs  messages.rs  mod.rs  (+1 more)
(+111 files in other folders)
